--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
 body {
   margin: 0;
   background: #000000;
