--- a/admin/partials/admin_header.html
+++ b/admin/partials/admin_header.html
@@ -11,7 +11,8 @@
         <a href="/admin/vip.html" class="btn">VIP</a>
         <a href="/admin/economy.html" class="btn">Economy</a>
         <a href="/admin/bug_reports.html" class="btn">Bug reports</a>
-        <a href="/admin/online_players.html">Online hráči</a>
+        <a href="/admin/online_players.html" class="btn">Online hráči</a>
+
 
         <!-- ODĚLENÍ -->
         <span style="width:1px;height:24px;background:#333;margin:0 8px;"></span>
